# ultrahdr

./: .dockerignore  .gitignore  AUDIT_20260125.md  CONTEXT-HANDOFF-WASM.md  CONTEXT-HANDOFF.md  Cargo.toml  Dockerfile  LICENSE  README.md  TESTING_PLAN.md  justfile  ultrahdr-api-spec.md
.cargo/: config.toml
.github/workflows/: ci.yml  ffi-tests.yml
examples/: encode.rs
src/: container.rs  decode.rs  encode.rs  lib.rs  types.rs
src/color/: convert.rs  gamut.rs  tonemap.rs  transfer.rs
src/gainmap/: apply.rs  compute.rs  mod.rs
src/jpeg/: icc.rs  markers.rs
src/metadata/: iso21496.rs  mod.rs  mpf.rs  xmp.rs
tests/: common.rs  compat_zune.rs  decode_basic.rs  edge_cases.rs  encode_basic.rs  metadata_compliance.rs  roundtrip.rs  wasm.rs
ultrahdr/: Cargo.toml
ultrahdr-core/: Cargo.toml
ultrahdr-core/benches/: gainmap.rs  simd_xplat.rs
ultrahdr-core/src/: lib.rs  types.rs
ultrahdr-core/src/color/: gamut.rs  mod.rs  streaming_tonemap.rs  tonemap.rs  transfer.rs
ultrahdr-core/src/gainmap/: apply.rs  compute.rs  mod.rs  streaming.rs
ultrahdr-core/src/metadata/: iso21496.rs  mpf.rs  xmp.rs
ultrahdr/src/: container.rs  decode.rs  encode.rs  lib.rs
ultrahdr/src/jpeg/: icc.rs  markers.rs  mod.rs
ultrahdr/tests/: common.rs  compat_zune.rs  decode_basic.rs  edge_cases.rs  encode_basic.rs  jpegli_integration.rs  metadata_compliance.rs  parity_libultrahdr.rs  roundtrip.rs  streaming_pipeline.rs  wasm.rs  zenjpeg_integration.rs
wasm-bench/: Cargo.toml
wasm-bench/src/: main.rs
