[workspace]
resolver = "2"
members = [
    "ultrahdr-core",
    "ultrahdr",
    "wasm-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/imazen/ultrahdr"

[workspace.dependencies]
# Core crate
ultrahdr-core = { path = "ultrahdr-core", version = "0.1" }

# Cooperative cancellation
enough = "0.3"

# Math
wide = "1.1"
half = "2.4"

# Types
bytemuck = { version = "1.14", features = ["derive"] }

# Error handling
thiserror = "2.0"

# JPEG codec
jpegli-rs = { version = "0.10.1", features = ["decoder"] }

# Color management
moxcms = "0.8"

# Image buffer abstractions
imgref = "1.10"
rgb = { version = "0.8", features = ["as-bytes"] }

# Testing
proptest = "1.4"
fast-ssim2 = "0.6"
criterion = "0.8"
