[package]
name = "ultrahdr-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Core gain map math and metadata for Ultra HDR - no codec dependencies"
repository = "https://github.com/imazen/ultrahdr"
keywords = ["hdr", "gainmap", "ultrahdr", "image", "no_std"]
categories = ["multimedia::images", "encoding", "no-std"]

[dependencies]
# Cooperative cancellation
enough = "0.3"

# Math
wide = "1.1"
half = "2.4"

# Types
bytemuck = { version = "1.14", features = ["derive"] }

# Error handling - std only for now
thiserror = "2.0"

[dev-dependencies]
# Property testing
proptest = "1.4"

[features]
default = ["std"]
std = ["enough/std"]
simd = []  # Enable explicit SIMD optimizations
# Future: alloc-only support
# alloc = ["enough/alloc"]
