[package]
name = "ultrahdr-core"
version = "0.1.1"
edition = "2021"
rust-version = "1.92"
license = "Apache-2.0"
description = "Core gain map math and metadata for Ultra HDR - no codec dependencies"
repository = "https://github.com/imazen/ultrahdr"
keywords = ["hdr", "gainmap", "ultrahdr", "image", "no_std"]
categories = ["multimedia::images", "encoding", "no-std"]
readme = "../README.md"

[dependencies]
# Cooperative cancellation
enough = "0.3"

# Math
wide = "1.1"
half = "2.4"

# SIMD (optional - for explicit SIMD optimizations)
archmage = { version = "0.2", default-features = false, features = ["macros"], optional = true }
magetypes = { version = "0.1", default-features = false, optional = true }

# Types
bytemuck = { version = "1.14", features = ["derive"] }

# Error handling - std only for now
thiserror = "2.0"

[dev-dependencies]
# Property testing
proptest = "1.4"

# Native-only benchmarking
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.8"

[[bench]]
name = "gainmap"
harness = false

[[bench]]
name = "simd_xplat"
harness = false
required-features = ["simd"]

[features]
default = ["std"]
std = ["enough/std", "archmage?/std", "magetypes?/std"]
simd = ["archmage", "magetypes"]  # Enable explicit SIMD optimizations
# Future: alloc-only support
# alloc = ["enough/alloc"]
