[package]
name = "ultrahdr"
version.workspace = true
edition.workspace = true
rust-version = "1.91"
license.workspace = true
repository.workspace = true
description = "Pure Rust Ultra HDR (JPEG with gain map) encoder/decoder"
keywords = ["hdr", "jpeg", "gainmap", "ultrahdr", "image"]
categories = ["multimedia::images", "encoding"]
readme = "../README.md"

[dependencies]
# Core gain map math and metadata
ultrahdr-core = { workspace = true }

# JPEG codec (optional, for convenience APIs)
jpegli-rs = { workspace = true, optional = true }

# Color management
moxcms = { workspace = true }

# Image buffer abstractions
imgref = { workspace = true }
rgb = { workspace = true }
bytemuck = { workspace = true }

# Math (re-exported from core, but needed for container)
wide = { workspace = true }
half = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Cooperative cancellation
enough = { workspace = true }

# Reference implementation comparison (optional, for FFI parity tests)
# Aliased to avoid name conflict with our crate
libultrahdr = { package = "ultrahdr", version = "0.1", optional = true }

[dev-dependencies]
# Testing (WASM-compatible)
fast-ssim2 = { workspace = true }

# WASM testing
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = "0.2.108"
wasm-bindgen-test = "0.3.58"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3", features = ["wasm_js"] }

# Native-only testing (these don't compile for WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
zune-image = { path = "../../zune-image/crates/zune-image" }
zune-core = { path = "../../zune-image/crates/zune-core" }
zune-jpeg = { path = "../../zune-image/crates/zune-jpeg" }

[features]
default = ["jpegli"]
jpegli = ["jpegli-rs"]  # Convenience APIs with bundled codec
simd = ["ultrahdr-core/simd"]  # Enable explicit SIMD optimizations
ffi-tests = ["libultrahdr"]  # Enable FFI parity tests with libultrahdr C++
